<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.saturn</groupId>
        <artifactId>saturn-commons</artifactId>
        <version>1.0</version>
    </parent>
    <artifactId>saturn-commons-http</artifactId>
    <packaging>jar</packaging>
    <version>1.1</version>
    <dependencies>
        <dependency>
            <groupId>com.saturn</groupId>
            <artifactId>saturn-commons-utils</artifactId>
            <version>1.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.9</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <version>4.4.6</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <name>saturn-commons-http</name>
    <distributionManagement>
        <repository>
            <id>archiva.internal</id>
            <name>Televida - BR Repository</name>
            <url>http://devops.televida.biz:18081/repository/internal/</url>
        </repository>
    </distributionManagement>
</project>